# Biogrid-Project

./: README.md  biogrid.db  pyproject.toml
notebooks/: demo.ipynb
src/biogrid/db/: manager.py  models.py
tests/: test_software.py
tests/data/: test_data.tsv
