[project]
name = "biogrid"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hira", email = "hiramanzoor543@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "sqlalchemy>=2.0.38"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
tests = [
    "pytest>=8.3.4",
]
